<resources>
  <string name="appName">SocialBox</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="welcome">"Welcome!"</string>
  <string name="invalid_username">Not a valid email</string>
  <string name="invalid_password">Password must be >5 characters</string>
  <string name="login_failed">"Login failed"</string>
  <string name="social_box">Social Box</string>
  <string name="social">Social</string>
  <string name="sign_in">Sign In</string>
  <string name="sign_up">Sign Up</string>
  <string name="title_activity_main">Social Box</string>
  <string name="password">Password</string>
  <string name="email">Email</string>
  <string name="app_image">App Image</string>
  <string name="error_google_sign">Error on loging with Google</string>
  <string name="notification">Notification</string>
  <string name="search">Search</string>
  <string name="user">User</string>
  <string name="group_name_which_can_be_very_big">Group name which can be very big</string>
  <string name="s_members">%s Members</string>
  <string name="login">Login</string>
  <string name="your_movies">Browse Movies</string>
  <string name="create_new_group">Create New Group</string>
  <string name="make_new_friends_form_a_new_group">Make new friends. Form a new group.</string>
  <string name="group_image_placeholder">Group Image Placeholder</string>
  <string name="add_group_name">Add group name</string>
  <string name="create_a_new_group">Create a new Group</string>
  <string name="go_to_chatbox">Go to Chatbox</string>
  <string name="movie_image">Movie Image</string>
  <string name="add_movie">Add Movie</string>
  <string name="hello_s">Hello %s</string>
  <string name="account_settings">Account Settings</string>
  <string name="your_favorite_movies">Your Favorite Movies</string>
  <string name="group_settings">Group Settings</string>
  <string name="shared_movie_lists_with_you">Shared Movie Lists With You</string>
  <string name="app_settings">App Settings</string>
  <string name="select_movie_from_your_collection">Select Movie From Your Collection</string>
  <string name="add_movies">Add Movies</string>
  <string name="add_movie_from_collection">Movies From Collection</string>
  <string name="search_new_movie">Search and Add</string>
  <string name="movie_small_image">movie small image</string>
  <string name="this_can_be_a_big_movie_name_lets_see_how_it_looks_like_because_there_are_a_lot_of_comstraints">This can be a big movie name lets see how it looks like because there are a lot of comstraints</string>
  <string name="s_selected">\t %s selected</string>
  <string name="back_button">Back Button</string>
  <string name="browse_all">Browse All</string>
  <string name="your_movies_text">Your Movies</string>
  <string name="browse_groups">Browse Groups</string>
  <string name="movie_poster">movie poster</string>
  <string name="s_5_0">%s/10.0</string>
  <string name="latest_movies">Latest Movies</string>
  <string name="log_out">Log Out</string>
  <string name="search_groups">Search Groups…</string>
  <string name="go_back_from_search">Go back from search</string>
  <string name="erase_written">Erase written</string>
  <string name="search_movies">Search Movies</string>
  <string name="s_movies">%s Movies</string>
  <string name="search_for_movies">Search for Movies</string>
  <string name="image_base_url">https://image.tmdb.org/t/p/w500</string>
  <string name="movie_selected">Movie Selected</string>
  <string name="type_a_message">Type a message…</string>
  <string name="send_message">send message</string>
  <string name="this_is_a_message">This is a Message</string>
  <string name="_10_00">10:00</string>
  <string name="message">Message</string>
  <string name="_8_00">8:00</string>
  <string name="john_grady_cole">John Grady Cole</string>
  <string name="user_icon">User Icon</string>
  <string name="group_members">Group Members</string>
  <string name="current_user_image">Current User Image</string>
  <string name="your_name">Your Name</string>
  <string name="view_all">View All</string>
  <string name="group_movies">Group Movies</string>
  <string name="movies">movies</string>
  <string name="add_a_member">Add a Member</string>
  <string name="leave_group">Leave Group</string>
  <string name="group_logo">Group Logo</string>
  <string name="back">Back</string>
  <string name="notifications">Notifications</string>
  <string name="settings">Settings</string>
  <string name="continueLogin">Continue</string>
  <string name="clear_notifications">Clear Notifications</string>
  <string name="enter_profile_name">Enter Profile Name</string>
  <string name="please_select_an_image_and_name_for_your_profile">Please Select an Image and Name for your profile</string>
  <string name="add_movies_and_strike_conversations">Add Movies and Strike Conversations!</string>
  <string name="searching">Searching…</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>