<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/search"
      android:icon="@drawable/ic_baseline_search_24"
      android:title="@string/search"
      android:contentDescription="@string/search"
      app:showAsAction="ifRoom"
      app:actionViewClass="androidx.appcompat.widget.SearchView"
      />

  <item
      android:id="@+id/notification"
      android:icon="@drawable/ic_baseline_notifications_24"
      android:title="@string/notification"
      android:contentDescription="@string/notification"
      app:showAsAction="ifRoom|collapseActionView" />

  <item
      android:id="@+id/user"
      android:icon="@drawable/ic_baseline_supervised_user_circle_24"
      android:title="@string/user"
      android:contentDescription="@string/user"
      app:showAsAction="ifRoom|collapseActionView"
      app:actionViewClass="android.widget.Button"/>

</menu>