<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2B9E3B7"
    tools:context=".MainActivity"
    >

  <TextView
      android:id="@+id/appName"
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:fontFamily="@font/pattaya_regular"
      android:text="@string/social_box"
      android:textColor="#000"
      android:textSize="70sp"
      android:gravity="center"
      android:background="#54B9E3B7"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <ImageView
      android:id="@+id/socialBoxImage"
      android:layout_width="match_parent"
      android:layout_height="850dp"
      android:src="@drawable/social_box_logo"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:contentDescription="@string/social"
      />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/signUpButton"
      android:layout_width="210dp"
      android:layout_height="400dp"
      android:textColor="#000"
      android:paddingTop="260dp"
      android:paddingEnd="40dp"
      android:paddingStart="10dp"
      android:textAlignment="viewEnd"
      android:text="@string/sign_up"
      android:textSize="30sp"
      android:backgroundTint="#C8C8C8"
      android:background="@drawable/sign_in_button"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/signInButton"
      android:layout_width="210dp"
      android:layout_height="400dp"
      android:background="@drawable/register_button"
      android:paddingEnd="40dp"
      android:paddingStart="20dp"
      android:paddingTop="260dp"
      android:text="@string/sign_in"
      android:textAlignment="viewEnd"
      android:textColor="#DD2C00"
      android:textSize="30sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      />

</androidx.constraintlayout.widget.ConstraintLayout>