<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.ui.LoginActivity"
    >

  <ImageView
      android:id="@+id/appImage"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:animateLayoutChanges="true"
      android:contentDescription="@string/app_image"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      tools:layout_editor_absoluteX="16dp"
      />
  <TextView
      android:id="@+id/app_name"
      android:layout_width="wrap_content"
      android:layout_height="100dp"
      android:layout_marginTop="40dp"
      android:fontFamily="@font/pattaya_regular"
      android:text="@string/appName"
      android:textSize="80sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />


  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/loginView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="90dp"
      android:animateLayoutChanges="true"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/app_name"
      >
    <View
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="8dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toBottomOf="@+id/loginText"
        app:layout_constraintStart_toStartOf="parent"
        />

    <View
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginBottom="11dp"
        android:layout_marginStart="8dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toBottomOf="@+id/loginText"
        app:layout_constraintStart_toEndOf="@+id/loginText"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInButton"
        android:layout_width="210dp"
        android:layout_height="80dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        tools:layout_editor_absoluteX="24dp"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/lobstertwo_bold"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/googleSignInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        />
  </androidx.constraintlayout.widget.ConstraintLayout>
  <com.google.android.material.button.MaterialButton
      android:id="@+id/signInButton"
      android:layout_width="match_parent"
      android:layout_height="70dp"
      android:text="@string/action_sign_in"
      android:textSize="20sp"
      android:translationY="5dp"
      android:enabled="false"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      />
  <com.google.android.material.progressindicator.CircularProgressIndicator
      android:id="@+id/loading_icon"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="522dp"
      android:indeterminate="true"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.473"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/displayLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="56dp"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/app_name">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/pattaya_regular"
        android:text="@string/welcome"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/materialTextView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/pattaya_regular"
      android:text="@string/please_select_an_image_and_name_for_your_profile"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/materialTextView"
      />

  <com.google.android.material.card.MaterialCardView
      android:id="@+id/profileImage"
      android:layout_width="140dp"
      android:layout_height="140dp"
      android:layout_marginTop="60dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/materialTextView2"
      app:cardCornerRadius="90dp"
      app:strokeColor="@color/teal_200"
      app:strokeWidth="1dp"
      >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/current_user_image"
        android:translationX="-4dp"
        android:translationY="-4dp"
        />
  </com.google.android.material.card.MaterialCardView>

  <EditText
      android:id="@+id/displayName"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="66dp"
      android:hint="@string/enter_profile_name"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/profileImage"
      android:autofillHints="name"
      android:inputType="text"
      />
  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>