<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".group.ui.GroupActivity"
    >

  <TextView
      android:id="@+id/place_holder"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/pattaya_regular"
      android:text="@string/make_new_friends_form_a_new_group"
      android:textSize="20sp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/searchTopBar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:elevation="10dp"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      style="@style/Widget.MaterialComponents.Toolbar.Primary"
      >
    <EditText
        android:id="@+id/searchGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:autofillHints="Name"
        android:hint="@string/search_groups"
        android:inputType="textAutoComplete"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        />
    <ImageButton
        android:id="@+id/cancelSearch"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/go_back_from_search"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintEnd_toStartOf="@id/searchGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        />
    <ImageButton
        android:id="@+id/eraseQuery"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/erase_written"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/searchGroup"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        />
  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/group_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="65dp"
      android:layout_marginEnd="10dp"
      android:layout_marginStart="10dp"
      android:layout_marginTop="60dp"
      android:elevation="2dp"
      app:layout_constraintBottom_toTopOf="@+id/movies_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
      app:layout_constraintVertical_bias="1.0"
      tools:listitem="@layout/card_group"
      />
  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:menu="@menu/top_app_bar"
        app:navigationIcon="@drawable/ic_baseline_notifications_24"
        app:title="SocialBox"
        app:titleCentered="true"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        />

  </com.google.android.material.appbar.AppBarLayout>
  <com.google.android.material.button.MaterialButton
      android:id="@+id/movies_button"
      android:layout_width="match_parent"
      android:layout_height="70dp"
      android:text="@string/your_movies"
      android:translationY="5dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />
  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
      android:id="@+id/new_group_button"
      android:layout_width="200dp"
      android:layout_height="50dp"
      android:layout_marginBottom="80dp"
      android:layout_marginEnd="16dp"
      android:paddingEnd="10dp"
      android:paddingStart="20dp"
      android:text="@string/create_new_group"
      app:layout_constraintBottom_toBottomOf="@+id/movies_button"
      app:layout_constraintEnd_toEndOf="parent"
      />

</androidx.constraintlayout.widget.ConstraintLayout>