<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.ui.UserActivity"
    >

  <com.google.android.material.card.MaterialCardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="412dp"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="320dp"
      android:elevation="10dp"
      app:layout_constraintTop_toTopOf="parent"
      app:strokeColor="#EDE4CC"
      app:strokeWidth="1dp"
      >

    <TextView
        android:id="@+id/account_settings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="5dp"
        android:fontFamily="@font/work_sans_light"
        android:gravity="center_vertical"
        android:paddingEnd="18dp"
        android:paddingStart="18dp"
        android:text="@string/account_settings"
        android:textFontWeight="1000"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
        />
    <TextView
        android:id="@+id/group_settings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:elevation="5dp"
        android:fontFamily="@font/work_sans_light"
        android:gravity="center_vertical"
        android:paddingEnd="18dp"
        android:paddingStart="18dp"
        android:text="@string/group_settings"
        android:textFontWeight="1000"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
        />
    <TextView
        android:id="@+id/favorite_movies"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:elevation="5dp"
        android:fontFamily="@font/work_sans_light"
        android:gravity="center_vertical"
        android:paddingEnd="18dp"
        android:paddingStart="18dp"
        android:text="@string/your_favorite_movies"
        android:textFontWeight="1000"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
        />
    <TextView
        android:id="@+id/shared_movies"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="180dp"
        android:elevation="5dp"
        android:fontFamily="@font/work_sans_light"
        android:gravity="center_vertical"
        android:paddingEnd="18dp"
        android:paddingStart="18dp"
        android:text="@string/shared_movie_lists_with_you"
        android:textFontWeight="1000"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
        />
    <TextView
        android:id="@+id/app_settings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="240dp"
        android:elevation="5dp"
        android:fontFamily="@font/work_sans_light"
        android:gravity="center_vertical"
        android:paddingEnd="18dp"
        android:paddingStart="18dp"
        android:text="@string/app_settings"
        android:textFontWeight="1000"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
        />
    <TextView
        android:id="@+id/logOut"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="300dp"
        android:elevation="5dp"
        android:fontFamily="@font/work_sans_light"
        android:gravity="center_vertical"
        android:paddingEnd="18dp"
        android:paddingStart="18dp"
        android:textColor="?attr/colorError"
        android:text="@string/log_out"
        android:textFontWeight="1000"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:background="#c0c0c0"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:background="#c0c0c0"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="180dp"
        android:background="#c0c0c0"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="240dp"
        android:background="#c0c0c0"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="300dp"
        android:background="#c0c0c0"
        />

  </com.google.android.material.card.MaterialCardView>

  <com.google.android.material.imageview.ShapeableImageView
      android:id="@+id/user_movie_image"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_marginTop="144dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:shapeAppearanceOverlay="@style/CornerSize"
      app:srcCompat="@drawable/app_logo"
      />
  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/welcome_user"
      android:layout_width="match_parent"
      android:layout_height="360dp"
      android:background="#7700FF"
      android:fontFamily="@font/pattaya_regular"
      android:gravity="center_horizontal"
      android:paddingTop="80dp"
      android:text="@string/hello_s"
      android:textSize="36sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />


</androidx.constraintlayout.widget.ConstraintLayout>