<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
  <com.google.android.material.card.MaterialCardView
      android:id="@+id/searchMovieCard"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginBottom="1dp"
      android:layout_marginTop="1dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >
    <TextView
        android:id="@+id/movieName"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:animateLayoutChanges="true"
        android:ellipsize="end"
        android:fontFamily="@font/work_sans"
        android:gravity="center"
        android:maxLines="1"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:scrollHorizontally="true"
        android:text="@string/this_can_be_a_big_movie_name_lets_see_how_it_looks_like_because_there_are_a_lot_of_comstraints"
        android:textSize="16sp"
        />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/selectedImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardCornerRadius="25dp"
        >

      <de.hdodenhof.circleimageview.CircleImageView
          android:id="@+id/cardSelected"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:animateLayoutChanges="true"
          android:background="#333333"
          android:contentDescription="@string/movie_image"
          android:src="@drawable/ic_baseline_done_24"
          android:visibility="gone"
          />
    </com.google.android.material.card.MaterialCardView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userMovieImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:animateLayoutChanges="true"
        android:contentDescription="@string/movie_selected"
        />

  </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>